--- a/package.json
+++ b/package.json
@@ -10,11 +10,15 @@
   "author": "damiangalvan",
   "license": "IMT",
   "devDependencies": {
+    "@types/bcrypt": "^5.0.0",
     "ts-node-dev": "^2.0.0",
     "typescript": "^4.9.5"
   },
   "dependencies": {
+    "bcrypt": "^5.1.0",
+    "cookie-session": "^2.0.0",
     "express": "^4.18.2",
+    "express-async-errors": "^3.1.1",
     "express-handlebars": "^6.0.7",
     "mongoose": "^6.9.1"
   }
