--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
+    "build": "tsc && npx copyfiles -u 1 src/views/**/* build",
     "dev": "ts-node-dev src/index.ts"
   },
   "keywords": [],
