--- a/package.json
+++ b/package.json
@@ -4,8 +4,10 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "build": "tsc && npx copyfiles -u 1 src/views/**/* build",
-    "dev": "ts-node-dev src/index.ts"
+    "clean": "npx rimraf build",
+    "build": "npm run clean && tsc && npx copyfiles -u 1 src/views/**/* build",
+    "dev": "ts-node-dev src/index.ts",
+    "start": "npm run build && node build/index.js "
   },
   "keywords": [],
   "author": "damiangalvan",
