--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
   "license": "IMT",
   "devDependencies": {
     "@types/bcrypt": "^5.0.0",
+    "@types/cookie-session": "^2.0.44",
+    "@types/express": "^4.17.17",
     "ts-node-dev": "^2.0.0",
     "typescript": "^4.9.5"
   },
