--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "clean": "npx rimraf build",
-    "build": "npm run clean && tsc && npx copyfiles -u 1 src/views/**/* build",
+    "copy-views": "ncp src/views build/views",
+    "build": "npm run clean && tsc && npm run copy-views",
     "dev": "ts-node-dev src/index.ts",
     "start": "npm run build && node build/index.js "
   },
@@ -16,6 +17,7 @@
     "@types/bcrypt": "^5.0.0",
     "@types/cookie-session": "^2.0.44",
     "@types/express": "^4.17.17",
+    "ncp": "^2.0.0",
     "ts-node-dev": "^2.0.0",
     "typescript": "^4.9.5"
   },
